--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,5 @@ jobs:
       - name: Installing surge
         run: npm install --global surge
       - name: deploying using surge
-        run: surge ./ bootcamp-aman.surge.sh --token $ {{{ secrets.SURGE_TOKEN }}
+        run: surge ./ bootcamp2020-aman.surge.sh --token ${{ secrets.SURGE_TOKEN }}
+
